--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 04:05:07 2018</p>
+         Last Run: Fri Nov 23 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>76</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
@@ -58,7 +58,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>47</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "72",
-                 "69",
+                 "80",
+                 "73",
+                 "70",
                  "71"
                ]
              },
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
+                 "78",
                  "66",
                  "56",
-                 "47"
+                 "46"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 04:05:07 2018</p>
+         Last Run: Fri Nov 23 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,26 +265,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>58</td>
                         <td>1</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>0</td>
                         <td>2</td>
                         <td>57</td>
                         <td>1</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>23</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,8 +323,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-1",
+                 "0",
                  "0"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
                  "1",
+                 "2",
                  "2"
                ]
              }
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "22",
-                 "23"
+                 "9",
+                 "9",
+                 "9"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 04:05:07 2018</p>
+         Last Run: Fri Nov 23 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -481,25 +481,25 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-6</td>
+                        <td>-5</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>91</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>82</td>
+                        <td>4</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>92</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -511,7 +511,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>90</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-6",
                  "-7"
                ]
@@ -610,7 +610,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "11",
+                 "4",
                  "4"
                ]
              },
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
                  "82",
+                 "84",
                  "86"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "92",
-                 "90"
+                 "93",
+                 "93",
+                 "91"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 04:05:07 2018</p>
+         Last Run: Fri Nov 23 05:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,23 +710,23 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-4</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>6</td>
-                        <td>86</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>28</td>
+                        <td>WSW</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -755,7 +755,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-4"
+                 "-6"
                ]
              },
              {
@@ -767,7 +767,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "81",
                  "82",
-                 "84",
-                 "86"
+                 "84"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "27",
-                 "28"
+                 "24",
+                 "25",
+                 "25"
                ]
              }
            ]
