--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 08:05:02 2018</p>
+         Last Run: Fri Nov 23 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -67,14 +67,14 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>5</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>44</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-4",
                  "-4",
                  "-3",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-2",
                  "-1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "76",
                  "65",
                  "55",
-                 "44"
+                 "45"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 08:05:02 2018</p>
+         Last Run: Fri Nov 23 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -266,13 +266,13 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,11 +280,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>8</td>
+                        <td>WSW</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "57",
-                 "56",
+                 "57",
                  "56"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "8",
-                 "8"
+                 "6",
+                 "6",
+                 "6"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 08:05:02 2018</p>
+         Last Run: Fri Nov 23 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,19 +482,19 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>6</td>
+                        <td>4</td>
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>83</td>
                         <td>0</td>
                         <td>10</td>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
                  "4",
+                 "5",
                  "4"
                ]
              },
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
+                 "94",
                  "94",
                  "91"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 08:05:02 2018</p>
+         Last Run: Fri Nov 23 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "82",
+                 "81",
                  "83"
                ]
              },
@@ -848,7 +848,7 @@
                "data":[
                  "24",
                  "24",
-                 "25"
+                 "24"
                ]
              }
            ]
