--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 10:05:02 2018</p>
+         Last Run: Fri Nov 23 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -32,17 +32,17 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>6</td>
                         <td>79</td>
                         <td>1</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>73</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -50,7 +50,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>64</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>68</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>53</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>42</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-4",
                  "-3",
                  "-3"
@@ -191,7 +191,7 @@
                  "79",
                  "72",
                  "68",
-                 "70"
+                 "69"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "64",
-                 "53",
-                 "42"
+                 "63",
+                 "58",
+                 "48",
+                 "37"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 10:05:02 2018</p>
+         Last Run: Fri Nov 23 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,19 +264,19 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
@@ -284,19 +284,19 @@
                         <td>1</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>6</td>
+                        <td>SW</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -407,7 +407,7 @@
                "data":[
                  "57",
                  "56",
-                 "55"
+                 "56"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "6",
-                 "6"
+                 "39",
+                 "38",
+                 "37"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 10:05:02 2018</p>
+         Last Run: Fri Nov 23 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,36 +482,36 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>7</td>
-                        <td>81</td>
+                        <td>5</td>
+                        <td>82</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>94</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>4</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
                         <td>93</td>
                      </tr>
                      <tr>
-                        <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>4</td>
-                        <td>83</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>SSW</td>
-                        <td>94</td>
-                     </tr>
-                     <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>4</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>91</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,8 +539,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-6",
-                 "-7"
+                 "-5",
+                 "-6"
                ]
              },
              {
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
+                 "5",
                  "4",
                  "4"
                ]
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "83",
+                 "82",
+                 "82",
                  "85"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
                  "94",
-                 "91"
+                 "93",
+                 "90"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 23 10:05:02 2018</p>
+         Last Run: Fri Nov 23 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "81",
-                 "83"
+                 "78",
+                 "79",
+                 "82"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "25"
+                 "39",
+                 "42",
+                 "44"
                ]
              }
            ]
